support set primary image of a menu item

--- a/app/globals.css
+++ b/app/globals.css
@@ -173,6 +173,6 @@
 }
 
 /* Hide default password reveal button in Microsoft Edge */
-input[type="password"]::-ms-reveal {
+input[type='password']::-ms-reveal {
   display: none;
 }
